<resources>
    <string name="app_name">Mealify</string>
    <string name="sign_in_to_">Sign in to continue planning meals</string>
    <string name="sign_up_to_">Sign up to start planning meals</string>
    <string name="welcome_bac">Welcome Back</string>
    <string name="email">Email</string>
    <string name="enter_your_">Enter your email</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">  Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="home_screen">Home Screen</string>
    <string name="search_recipes_ingredients">Search recipes, ingredients...</string>
    <string name="suggested_meals">Suggested Meals</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="breakfast">Breakfast</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="featured_today">Featured Today</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="servings">Servings</string>
    <string name="_4_people">4 people</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="description">Description</string>
    <string name="add_to_weekly_plan">Add to Weekly Plan</string>
    <string name="tutorial">Tutorial</string>
    <string name="for_more_details">For more details:</string>
    <string name="weekly_planner">Weekly Planner</string>
    <string name="plan_your_meals">Plan your meals for the week</string>
    <string name="current_week">Current Week</string>
    <string name="today_meals">Today\'s Meals</string>
    <string name="add_meals_subtitle">Add meals for breakfast, lunch, and dinner</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="no_meals_planned">No meals planned</string>
    <string name="add_a_meal">Add a meal</string>
    <string name="select_date">Select Date</string>
    <string name="select_meal_type">Select Meal Type</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="meal_added_to_plan">Meal added to your plan!</string>
    <string name="please_select_date">Please select a date</string>
</resources>