<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    tools:context=".presentation.auth.view.SignInFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/app_icon"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac"
        android:textColor="#1E2939"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <TextView
        android:id="@+id/sign_in_to_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_to_"
        android:textAppearance="@style/sign_in_to_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_bac" />


    <com.dmy.foodplannerapp.utils.TextFormField
        android:id="@+id/email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:hintText="Enter your email"
        app:labelText="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_to_"
        app:startIcon="@drawable/email" />

    <com.dmy.foodplannerapp.utils.TextFormField
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintText="Enter Your Password"
        app:isPassword="true"
        app:labelText="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_field"
        app:startIcon="@drawable/lock" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="4sp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_gradient"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />

    <TextView
        android:id="@+id/or_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/or_continue_with"
        android:textColor="#99A1AF"
        android:textSize="14sp"
        android:translationY="-1.95sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <ImageView
        android:id="@+id/divider_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="#E5E7EB"
        app:layout_constraintBottom_toBottomOf="@+id/or_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/or_continue"
        app:layout_constraintTop_toTopOf="@+id/or_continue"
        app:srcCompat="@drawable/divider" />

    <ImageView
        android:id="@+id/divider_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="#E5E7EB"
        app:layout_constraintBottom_toBottomOf="@+id/or_continue"
        app:layout_constraintEnd_toStartOf="@+id/or_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/or_continue"
        app:srcCompat="@drawable/divider" />

    <LinearLayout
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_container"
        android:divider="@drawable/horizontal_space"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp"
        android:paddingVertical="16dp"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_continue">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/google" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Google" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/continue_as_guest"
        android:textColor="@color/black"
        app:backgroundTint="#F3F4F6"
        app:layout_constraintBottom_toTopOf="@+id/layout_donthave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_donthave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/don_t_have_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="don't have account? "
            android:textColor="@color/faded_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
